--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
           <p><a href="demo/index.html">Live Demonstration</p>
 
+          <iframe src="demo/index.html" width="600" height="600">iframe not supported</iframe>
+
           <h3><a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
           <p><a href="https://github.com/blog/821" class="user-mention">@widged</a> </p>
