archives point to gh-pages

--- a/index.html
+++ b/index.html
@@ -40,16 +40,21 @@
 
           <h3><a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-          <p><a href="https://github.com/blog/821" class="user-mention">@widged</a> </p>
+          <p>Author: <a href="https://github.com/blog/821" class="user-mention">@widged</a> </p>
 
+          <p>Bird strikes dataset available as a <a href="http://www.tableausoftware.com/public/community/sample-data-sets">Tableau Sample Datasets</a>, Direct link: <a href="http://www.tableausoftware.com/public/sites/default/files/Bird%20Strikes.xlsx">Bird%20Strikes.xlsx</a> (16.5 MB). Converted to a tab separated value files using Open Office. </p>
+
+          <p>Charting done using the <a href="http://d3js.org/">d3js</a> library and custom graphing code.</p>
+
+        
         </section>
 
         <aside id="sidebar">
-          <a href="https://github.com/widged/Datascience_Tableau/zipball/master" class="button">
+          <a href="https://github.com/widged/Datascience_Tableau/zipball/gh-pages" class="button">
             <small>Download</small>
             .zip file
           </a>
-          <a href="https://github.com/widged/Datascience_Tableau/tarball/master" class="button">
+          <a href="https://github.com/widged/Datascience_Tableau/tarball/gh-pages" class="button">
             <small>Download</small>
             .tar.gz file
           </a>
