mention of nodeparser branch

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
           <p>Bird strikes dataset available as a <a href="http://www.tableausoftware.com/public/community/sample-data-sets">Tableau Sample Datasets</a>, Direct link: <a href="http://www.tableausoftware.com/public/sites/default/files/Bird%20Strikes.xlsx">Bird%20Strikes.xlsx</a> (16.5 MB). Converted to a tab separated value files using Open Office. </p>
 
-          <p>The data for the charts have been extracted using custom scripts written in nodejs. These script are published in the  <a href="https://github.com/widged/Datascience_Tableau/tree/nodeparser">nodeparser</a> branch (a separate branch was created to avoid to bloat the demo as the nodeparser archive includes a 25.9 MB "Bird Strikes.tab" is included, download the nodeparser branch as a <a href="https://github.com/widged/Datascience_Tableau/zipball/nodeparser" >.zip</a> or <a href="https://github.com/widged/Datascience_Tableau/tarball/nodeparser">tar</a> file) </p>
+          <p>The data for the charts have been extracted using custom scripts written in nodejs. These scripts are published in the  <a href="https://github.com/widged/Datascience_Tableau/tree/nodeparser">nodeparser</a> branch. This nodeparser branch was created to avoid to bloat the demo as the nodeparser archive includes a 25.9 MB "Bird Strikes.tab" is included (download the nodeparser branch as a <a href="https://github.com/widged/Datascience_Tableau/zipball/nodeparser" >.zip</a> or <a href="https://github.com/widged/Datascience_Tableau/tarball/nodeparser">tar</a> file).</p>
 
           <p>Charting done using the <a href="http://d3js.org/">d3js</a> library and custom graphing code.</p>
 
